# openai_agents_sdk

./: README.md  panacloud_graph
chain_hello/: pyproject.toml
examaples-openai-agents/: pyproject.toml
examaples-openai-agents/src/exmaples_openai_agents/: __init__.py  agent_as_tool.py  customer_service.py  deterministic.py  dynamic_system_prompt.py  filesearchtool.py  handoff_message_filter.py  llm_as_judge.py  parallelization.py  routing.py  websearchtool.py
fastapi_agent/: pyproject.toml
fastapi_agent/src/fastapi_agent/: __init__.py  chainlit_app.py  main.py  panaversity.py
financial_research_assistant/: pyproject.toml
financial_research_assistant/src/financial_research_assistant/: __init__.py  config.py  main.py  manager.py
financial_research_assistant/src/financial_research_assistant/agents/: financials_agent.py  planner_agent.py  search_agent.py  verifier_agent.py  writer_agent.py
first_agent/: pyproject.toml
first_agent/src/first_agent/: __init__.py
first_handoff/: pyproject.toml
first_handoff/src/first_handoff/: __init__.py
learning/: pyproject.toml
learning/src/learning/: __init__.py  gemini_langchain_tools.py  openai_tools.py  streaming.py  tavily_search.py
research_assistant/: pyproject.toml  topic.md
research_assistant/src/research_assistant/: __init__.py  main.py  models.py
research_assistant/src/research_assistant/agents/: planner_agent.py  search_agent.py  writer_agent.py
travel_planner/: pyproject.toml
travel_planner/src/travel_planner/: __init__.py  structured_output.py  tool_check.py
voice_agent/: pyproject.toml
voice_agent/src/voice_agent/: __init__.py  my_workflow.py  recorded.py  streaming_audio.py  voice.py
weather_assistant_agent/: pyproject.toml
weather_assistant_agent/src/weather_assistant_agent/: __init__.py  main.py
