[project]
name = "first-handoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fahad Khan", email = "fghory@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.4",
]

[project.scripts]
first-handoff = "first_handoff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
