[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fahad Khan", email = "fghory@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
    "google-generativeai>=0.3.0",
]

[project.scripts]
travel-planner = "travel_planner.structured_output:main"
check-tool = "travel_planner.tool_check:main"    
gemini-planner = "travel_planner.gemini_structured_output:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
