[project]
name = "weather-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Fahad Khan", email = "fghory@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.scripts]
weather-assistant = "weather_assistant_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
